# charged-golem

./: Cargo.toml  readme.md
charged-model/: Cargo.toml
charged-model/src/: lib.rs
charged-server/: Cargo.toml
charged-server/src/: backoffice.rs  conversions.rs  lib.rs  worker.rs
charged-server/wit/: chargenetwork.wit
charged-worker/: Cargo.toml  server.rs
charged-worker/src/: conversions.rs  lib.rs  ocpp_handlers.rs  worker.rs
charged-worker/wit/: chargeworker.wit
