[package]
name = "chargedserver"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "chargedserver"
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:chargedserver"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[dependencies]
wit-bindgen = { version = "0.7.0", default_features = false }
once_cell = "1.8.0"
charger-model = { path = "../charged-model" }
reqwest = { version = "0.11.6", features = ["json"], git = "https://github.com/golemcloud/reqwest", branch = "initial-wasi-impl" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

