[package]
name = "chargedserver"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component", rev = "e57d1d1405ed2d76f1f3d8647480dea700379ff8" }
once_cell = "1.8.0"
charger-model = { path = "../charged-model" }
reqwest = { version = "0.11.6", features = ["json", "blocking"], git = "https://github.com/golemcloud/reqwest", branch = "initial-wasi-impl" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3.28"
