[package]
name = "chargedworker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "chargedworker"
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:chargedworker"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[dependencies]
wit-bindgen = { version = "0.7.0", default_features = false }
once_cell = "1.8.0"
charger-model = { path = "../charged-model" }
queues = "1.0.2"