[package]
name = "chargedworker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component", rev = "e57d1d1405ed2d76f1f3d8647480dea700379ff8" }
once_cell = "1.8.0"
charger-model = { path = "../charged-model" }
queues = "1.0.2"
rust-ocpp = "0.3.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }